# ml-note

./: .gitignore  pyproject.toml
blogs/: pytorch.md
notebooks/: gradient_descent.ipynb  lstm.ipynb  mlp.ipynb
